discussion/kv_engine/141651/141651_rev10_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-42795: Replace setup/reset context with execute env

The setup/reset context API was not sufficient for maintaining thread
context and magma is unable to support stackable contexts. By switching
to a new API that supports passing in the execution environment pointer,
we can implement arena guards that can provide stackable environments.

An example of an execution environment sequence in magma:

A compactor thread picks up a compaction task and sets the execution
environment to the kvstore being compaction. During compaction, we need
to create and destroy sstables which require accessing the global
execution environment since we are utilizing the global fd cache.
The magma code path might have multiple calls to setup the global
execution environment requiring the environments to be stackable.

Example:

- setup execution environment to specific bucket via get/set.
- non arena guard ... set execution env to global
- non arena guard ... set execution env to global
- destructor of 2nd non arena guard
- destructor of 1st non arena guard
- reset back to original env context

This is checkin 1 of 2 for kv engine side. The 2nd check in will remove
the old magma configuration parameters for thread context.

Change-Id: I0afbfcdeae0a2eef99c5ca229244d7175f10af71

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2020-12-16 19:19:22.000000000
Message: 
Uploaded patch set 10.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-12-16 19:41:50.000000000
Message: 
Patch Set 10: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32622/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(496): error C2039: "GetExecutionEnv": is not a member of "magma::Magma::Config" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32622/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28118/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:496:28:
error: no member named "GetExecutionEnv" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28118/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6321/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:496:28: error: no member named "GetExecutionEnv" in "magma::Magma::Config" [clang-diagnostic-error]
    configuration.magmaCfg.GetExecutionEnv = [currEngine]() {
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:499:28: error: no member named "SetExecutionEnv" in "magma::Magma::Config" [clang-diagnostic-error]
    configuration.magmaCfg.SetExecutionEnv =
                           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6321/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:496:28:
error: no member named "GetExecutionEnv" in "magma::Magma::Config" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6321/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7919/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8194/ : FAILURE

Compile error at [2020-12-16T19:30:00.667Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:496:28:
error: no member named "GetExecutionEnv" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8194/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6872/ : FAILURE

Compile error at [2020-12-16T19:22:16.634Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:496:28:
error: no member named "GetExecutionEnv" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6872/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15739/ : FAILURE

Compile error at [2020-12-16T19:25:33.424Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:496:28:
error: no member named "GetExecutionEnv" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15739/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/4856/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7801/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
